k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        fsGroup: 999
      automountServiceAccountToken: false
      containers:
      - name: postgres
        image: postgres:15-alpine 
        args: ["-c", "max_connections=250"] 
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
            ephemeral-storage: "500Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
            ephemeral-storage: "2Gi"
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data 
          subPath: pgdata
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc 
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service 
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
