k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team13-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nthu-team13.duckdns.org
    secretName: team13-tls-cert
  rules:
  - host: nthu-team13.duckdns.org 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8080
